docs: use standard English automatically instead of automagically
if you use a slang word once or twice in technical documentation
it can be seen as tounge in cheek, but 8 times is overdoing it in my opinion

let's just use standard English 'automatically' across the board instead

--- a/doc/po/AppleTalk.md.ja.po
+++ b/doc/po/AppleTalk.md.ja.po
@@ -159,7 +159,7 @@ msgid ""
 "you have only one network interface up and running, you haven't to deal with "
 "atalkd's config at all: atalkd will use AppleTalk's self-configuration "
 "features to get an AppleTalk address and to register itself in the network "
-"automagically."
+"automatically."
 msgstr ""
 "これは最も単純な形式で、AppleTalk を netatalk で使用できる。 稼働中のネット"
 "ワーク インターフェイスが 1 つだけの場合は、atalkd の設定をまったく処理する必"
@@ -894,7 +894,7 @@ msgstr "直接 CUPS サポートを使用する"
 #: manual/AppleTalk.md:352
 msgid ""
 "There exists one special share named *cupsautoadd*. If this is present in "
-"*papd.conf*, then all available CUPS queues will be served automagically "
+"*papd.conf*, then all available CUPS queues will be served automatically "
 "using the parameters assigned to this global share. But subsequent printer "
 "definitions can be used to override these global settings for individual "
 "spoolers."
