--- a/doc/po/afp.conf.5.md.ja.po
+++ b/doc/po/afp.conf.5.md.ja.po
@@ -1044,7 +1044,7 @@ msgstr "advertise ssh = *論理型* (デフォルト: *no*) **(G)**"
 #: manpages/man5/afp.conf.5.md:372
 #, no-wrap
 msgid ""
-"> Allows old Mac OS X clients (10.3.3-10.4) to automagically establish a\n"
+"> Allows old Mac OS X clients (10.3.3-10.4) to automatically establish a\n"
 "tunneled AFP connection through SSH. If this option is set, the server's\n"
 "answers to client's FPGetSrvrInfo requests contain an additional entry.\n"
 "It depends on both client's settings and a correctly configured and\n"
@@ -1055,7 +1055,7 @@ msgid ""
 "the other hand, Apple's client side implementation of this feature in\n"
 "Mac OS X versions prior to 10.3.4 contained a security flaw.\n"
 msgstr ""
-"> 古いMac OS Xクライアント（10.3.3から10.4）にSSHでトンネルしたAFP接続を魔法のように自動的に確立させる。\n"
+"> 古いMac OS Xクライアント（10.3.3から10.4）にSSHでトンネルしたAFP接続を自動的に確立させる。\n"
 "このオプションを設定した場合、クライアントのFPGetSrvrInfo要求へのサーバの返答は追加エントリを含む。\n"
 "これはクライアントの設定と**sshd**(8)が正しく設定されて動作するサーバ上で実行中であるかに依存する。\n"
 ">\n"
