--- a/doc/po/atalkd.conf.5.md.ja.po
+++ b/doc/po/atalkd.conf.5.md.ja.po
@@ -326,7 +326,7 @@ msgstr ""
 msgid ""
 "> Seed an AppleTalk router. This requires two or more interfaces to be\n"
 "configured. If you have a single network interface, use **-router**\n"
-"instead. It also causes all missing arguments to be automagically\n"
+"instead. It also causes all missing arguments to be automatically\n"
 "configured from the network.\n"
 msgstr ""
 "> AppleTalk ルーターをシードする。これには、2 つ以上のインターフェイスを構成する必要がある。\n"
