--- a/doc/po/papd.conf.5.md.ja.po
+++ b/doc/po/papd.conf.5.md.ja.po
@@ -217,7 +217,7 @@ msgstr ""
 #: manpages/man5/papd.conf.5.md:35
 msgid ""
 "When CUPS support is compiled in, then *cupsautoadd* as the first entry in "
-"papd.conf will automagically configure and make all CUPS printers available "
+"papd.conf will automatically configure and make all CUPS printers available "
 "to papd (customizable -- see below). This can be overwritten for individual "
 "printers by subsequently adding individual entries using the CUPS queue name "
 "as *pr* entry. Note: CUPS support is mutually exclusive with System V "
@@ -498,7 +498,7 @@ msgstr ""
 #: manpages/man5/papd.conf.5.md:143
 msgid ""
 "There exists one special share named \"cupsautoadd\". If this is present as "
-"the first entry then all available CUPS queues will be served automagically "
+"the first entry then all available CUPS queues will be served automatically "
 "using the parameters assigned to this global share. But subsequent printer "
 "definitions can be used to override these global settings for individual "
 "spoolers."
