--- a/doc/po/afp_signature.conf.5.md.ja.po
+++ b/doc/po/afp_signature.conf.5.md.ja.po
@@ -149,10 +149,10 @@ msgstr ""
 #, no-wrap
 msgid ""
 "**afp_signature.conf** is the configuration file used by **afpd** to store\n"
-"a server signature automagically. The configuration lines are composed\n"
+"a server signature automatically. The configuration lines are composed\n"
 "like:\n"
 msgstr ""
-"**afp_signature.conf** はサーバシグネチャを魔法のように\n"
+"**afp_signature.conf** はサーバシグネチャを\n"
 "自動的に指定するために **afpd** が利用する設定ファイルである。\n"
 "設定行は以下のように構成される。\n"
 
