--- a/doc/po/afp_voluuid.conf.5.md.ja.po
+++ b/doc/po/afp_voluuid.conf.5.md.ja.po
@@ -161,7 +161,7 @@ msgid ""
 "**afp_voluuid.conf** is the configuration file used by **afpd** to store\n"
 "UUID of all AFP volumes. The configuration lines are composed like:\n"
 msgstr ""
-"**afp_voluuid.conf** は全てのAFPボリュームのUUIDを魔法のように\n"
+"**afp_voluuid.conf** は全てのAFPボリュームのUUIDを\n"
 "自動的に指定するために **afpd** が利用する設定ファイルである。\n"
 "設定行は以下のように構成される。\n"
 
