--- a/doc/po/atalkd.8.md.ja.po
+++ b/doc/po/atalkd.8.md.ja.po
@@ -306,7 +306,7 @@ msgid ""
 "information.\n"
 msgstr ""
 "> 設定情報については、**atalkd.conf**ではなく、*設定ファイル*\n"
-"を参照してください。\n"
+"を読み込む。\n"
 
 #. type: Plain text
 #: manpages/man8/atalkd.8.md:47 manpages/man8/papd.8.md:54
